# OCRTranslator

./: .gitignore  README.md  main.py  package-lock.json  pyproject.toml  requirements.txt  tesseract_runtime_hook.py
models/: model_facade.py
models/image_manager/: image_manager.py
models/ocr/: ocr.py  preprocess.py
models/translator/: translator.py
models/utils/: capture_image.py  image_converter.py  tesseract_locator.py
presenter/: main_presenter.py
presenters/: main_presenter.py
src/: __main__.py  main.py
src/image_manager/: image_manager.py
src/ocr/: ocr.py  preprocess.py
src/translator/: translator.py
test/: test_ocr.py
view/: main_view.py  screen_overlay.py
views/: capture_overlay.py  main_view.py
