[project]
name = "ocrtranslator"
version = "1.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anyio>=4.10.0",
    "certifi>=2025.8.3",
    "flet>=0.28.3",
    "googletrans>=4.0.2",
    "h11>=0.16.0",
    "h2>=4.3.0",
    "hpack>=4.1.0",
    "httpcore>=1.0.9",
    "httpx>=0.28.1",
    "hyperframe>=6.1.0",
    "idna>=3.10",
    "langdetect>=1.0.9",
    "mss>=10.1.0",
    "numpy>=2.2.6",
    "oauthlib>=3.3.1",
    "opencv-python>=4.12.0.88",
    "packaging>=25.0",
    "pillow>=11.3.0",
    "pip>=25.2",
    "pyqt6>=6.7.0",
    "pytesseract>=0.3.13",
    "pytest>=8.4.2",
    "repath>=0.9.0",
    "six>=1.17.0",
    "sniffio>=1.3.1",
    "typing-extensions>=4.15.0",
    "pynput>=1.7.6",
]
